--- a/data/stories.yml
+++ b/data/stories.yml
@@ -33,3 +33,10 @@ stories:
   steps:
   - intent: greet
   - action: utter_greet
+
+- story: interactive_story_1
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: mood_great
+  - action: utter_happy
