--- a/domain.yml
+++ b/domain.yml
@@ -3,10 +3,10 @@ session_config:
   carry_over_slots_to_new_session: true
 intents:
 - greet
+- mood_great
 - goodbye
 - affirm
 - deny
-- mood_great
 - mood_unhappy
 - bot_challenge
 responses:
@@ -25,4 +25,5 @@ responses:
   - text: I am a bot, powered by Rasa.
 actions:
 - utter_greet
+- utter_happy
 version: '2.0'
